# Fast_API

./: .gitignore  main.py  pyproject.toml  todos.py
openai_agent_SDK/: main.py  pyproject.toml
todo/: alembic.ini  main.py  pyproject.toml
todo/alembic/: env.py
todo/alembic/versions/: 58bf7af91838_initial_schema.py
todo/auth/: auth.py
todo/databas/: db.py
todo/database/: db.py
todo/models/: models.py
todo/schemas/: schemas.py
todo_postgrass/: Readme.md  alembic.ini  main.py  pyproject.toml
todo_postgrass/alembic/: env.py
todo_postgrass/alembic/versions/: 34a5cd550a10_create_todos_table.py
todo_postgrass/database/: database.py
todo_postgrass/models/: model.py
