[project]
name = "todos"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "uv (>=0.11.21,<0.12.0)",
    "fastapi (>=0.137.2,<0.138.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
