[project]
name = "postgrss"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
